- Set cab ride as start page.

--- a/TaxiCab/app/cab-ride/add-cab-ride.html
+++ b/TaxiCab/app/cab-ride/add-cab-ride.html
@@ -15,7 +15,7 @@
                 <!-- BASIC INPUT -->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h2 class="panel-title section-heading no-margin">Car Ride</h2>
+                        <h2 class="panel-title section-heading no-margin">Cab Ride</h2>
                     </div>
                     <div class="panel-body">
                         <div class="form-horizontal">
