--- a/TaxiCab/app/cab-ride/add-cab-ride.html
+++ b/TaxiCab/app/cab-ride/add-cab-ride.html
@@ -1,60 +1,64 @@
 ﻿<div class="page-header">
     <div class="container">
-        <h1 class="page-title pull-left">Author Information</h1>
+        <h1 class="page-title pull-left">Cab Ride Information</h1>
         <ol class="breadcrumb">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Author</a></li>
-            <li class="active">Add author</li>
+            <li><a href="#">Cab Ride</a></li>
+            <li class="active">Add Cab Ride</li>
         </ol>
     </div>
 </div>
 <div class="page-content">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <!-- BASIC INPUT -->
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h2 class="panel-title section-heading no-margin">Cab Ride</h2>
-                    </div>
-                    <div class="panel-body">
-                        <div class="form-horizontal">
-                            <div class="form-group" data-ng-if="vm.result">
-                                <label class="col-md-2 control-label">Result</label>
-                                <div class="col-md-10">
-                                    {{ vm.result | currency }}
+            <form name="vm.myForm" role="form" confirm-on-exit>
+
+                <div class="col-md-12">
+                    <!-- BASIC INPUT -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h2 class="panel-title section-heading no-margin">Cab Ride</h2>
+                        </div>
+                        <div class="panel-body">
+                            <div class="form-horizontal">
+                                <div class="form-group" data-ng-if="vm.result">
+                                    <label class="col-md-2 control-label">Result</label>
+                                    <div class="col-md-10">
+                                        {{ vm.result | currency }}
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Number of minutes while traveling above 6 mph</label>
-                                <div class="col-md-10">
-                                    <input type="text" class="form-control" data-ng-model="vm.cabRide.minutesAboveSixMph" placeholder="Number of minutes while traveling above 6 mph" required>
+                                <div class="form-group">
+                                    <label class="col-md-2 control-label">Number of minutes while traveling above 6 mph</label>
+                                    <div class="col-md-10">
+                                        <input type="text" class="form-control" data-ng-model="vm.cabRide.minutesAboveSixMph" placeholder="Number of minutes while traveling above 6 mph" name="number of minutes while traveling above 6 mph" required>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Number of miles traveled while traveling below 6 mph</label>
-                                <div class="col-md-10">
-                                    <input type="text" class="form-control" data-ng-model="vm.cabRide.milesBelowSixMph" placeholder="Number of miles traveled while traveling below 6 mph" required>
+                                <div class="form-group">
+                                    <label class="col-md-2 control-label">Number of miles traveled while traveling below 6 mph</label>
+                                    <div class="col-md-10">
+                                        <input type="text" class="form-control" data-ng-model="vm.cabRide.milesBelowSixMph" placeholder="Number of miles traveled while traveling below 6 mph" name="Number of miles traveled while traveling below 6 mph" required>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Date</label>
-                                <div class="col-md-10">
-                                    <input type="text" class="form-control" data-ng-model="vm.cabRide.date" placeholder="date" required>
+                                <div class="form-group">
+                                    <label class="col-md-2 control-label">Date</label>
+                                    <div class="col-md-10">
+                                        <input type="text" class="form-control" data-ng-model="vm.cabRide.date" placeholder="date" name="date" required>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 control-label">Time</label>
-                                <div class="col-md-10">
-                                    <input type="text" class="form-control" data-ng-model="vm.cabRide.time" placeholder="time" required>
+                                <div class="form-group">
+                                    <label class="col-md-2 control-label">Time</label>
+                                    <div class="col-md-10">
+                                        <input type="text" class="form-control" data-ng-model="vm.cabRide.time" placeholder="time" name="time" required>
+                                    </div>
                                 </div>
+                                <button type="submit" class="btn btn-primary pull-right" data-ng-click="vm.addEntity(vm.cabRide)">Save</button>
                             </div>
-                            <button type="submit" class="btn btn-primary pull-right" data-ng-click="vm.addEntity(vm.cabRide)">Save</button>
                         </div>
                     </div>
+                    <!-- END BASIC INPUT -->
                 </div>
-                <!-- END BASIC INPUT -->
-            </div>
-        </div>
+
+            </form>
+</div>
     </div>
 </div>
